--- a/index.html
+++ b/index.html
@@ -422,7 +422,18 @@
 		</div>
 
 		<div class="col-xs-12" style="height: 20px"></div>
-
+		<div class="container">
+			<h3> Cognitive Walkthrough </h3>
+			<p>
+				After creating the high-fidelity prototype, I was able to perform a cognitive walkthrough on the application. Through this I was able to understand how a user would interact with the app while obtaining first impressions from potential users. This was also a quick and efficient way to obtain feedback and criticism on how I could improve and fix the application's user experience. The key takeaways from the cognitive walkthrough were:
+			</p>
+			<ul>
+				<li> User Interface is clean, simple and easy to use </li>
+				<li> Navigation through the application is easy to follow </li>
+				<li> Requires more emphasis on carbon emissions saved. This could be achieved through a an overall daily, weekly and monthly total of how much a user saves on emissions. </li>
+				<li> List of hobbies to choose from is too long and overwhelming. This could be solved through implementing a search/filter feature. </li>
+			</ul>
+	</div>
 
     <div class="container">
       <div class="row">
@@ -438,9 +449,11 @@
             allowfullscreen
           ></iframe>
         </div>
-    
+		
+		
+
         <div class="col-sm-6">
-          <h3> Conclusion </h3>
+			<h3> Conclusion </h3>
           <p>
             This project was my first time conducting and applying a human-centered design process and it showed me the importance of having the user in mind throughout the entire journey. Having a clear goal in mind, while also having multiple insights from potential users, it made the designing process much smoother and directed as designing felt more objective rather than open-ended.
           </p>
@@ -453,9 +466,17 @@
           <p>
             Moving forward, I would love to have the chance to explore more functionalities that Teleport could incorporate, such as a social or safety feature, and expand the prototype as well. I would also want to perform Usability Testing on my prototype to gain even further insights on what can be improved on. Finally, I would also spend some more time creating designs for the potential notifications that a user would receive when they have this application installed, such as route information, safety alerts, and recommended activities. 
           </p>
+
         </div>
 
       </div>
+	
+	  <div class="col-xs-12" style="height: 20px"></div>
+	  <div class="container">
+		<h3>Final Pitch Video</h2>
+		<iframe src="https://drive.google.com/file/d/1MhtU1GQQFTLslXYRbtJnRZFH47G6ivof/preview" width="1040" height="640" allow="autoplay"></iframe>
+	  </div>
+	  
 
 
     </div>
