--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@
 	  <div class="col-xs-12" style="height: 20px"></div>
 	  <div class="container">
 		<h3>Final Pitch Video</h2>
-		<iframe src="https://drive.google.com/file/d/1MhtU1GQQFTLslXYRbtJnRZFH47G6ivof/preview" width="1040" height="640" allow="autoplay"></iframe>
+		<iframe src="https://drive.google.com/file/d/1MhtU1GQQFTLslXYRbtJnRZFH47G6ivof/preview" width="1080" height="720" allow="autoplay" allowfullscreen="true"></iframe>
 	  </div>
 	  
 
